--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:lib:prod": "ng build @swimlane/ngx-datatable --configuration production",
+    "packlib": "cd ./dist/swimlane/ngx-datatable && npm pack --pack-destination ~",
     "copy-files": "cp README.md dist/swimlane/ngx-datatable/README.md && cp LICENSE dist/swimlane/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/swimlane/ngx-datatable/assets\" && cpx \"projects/swimlane/ngx-datatable/src/lib/themes/**/*\" \"dist/swimlane/ngx-datatable/themes\"",
     "build:css": "scss-bundle  -c ./scss-bundle.config.json && node-sass -o dist/swimlane/ngx-datatable/themes dist/swimlane/ngx-datatable/themes && node-sass -o dist/swimlane/ngx-datatable dist/swimlane/ngx-datatable",
     "test": "run-p lint test:unit",
@@ -65,7 +66,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "ng-packagr": "^13.1.2",
-    "node-sass": "^6.0.1",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "pretty-quick": "^2.0.1",
